1.8.0/_sources/examples_built/fiber_tracking/tracking_probabilistic.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples_built\fiber_tracking\tracking_probabilistic.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_built_fiber_tracking_tracking_probabilistic.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_built_fiber_tracking_tracking_probabilistic.py:


=====================================================
An introduction to the Probabilistic Direction Getter
=====================================================

Probabilistic fiber tracking is a way of reconstructing white matter
connections using diffusion MR imaging. Like deterministic fiber tracking, the
probabilistic approach follows the trajectory of a possible pathway step by
step starting at a seed, however, unlike deterministic tracking, the tracking
direction at each point along the path is chosen at random from a distribution.
The distribution at each point is different and depends on the observed
diffusion data at that point. The distribution of tracking directions at each
point can be represented as a probability mass function (PMF) if the possible
tracking directions are restricted to discrete numbers of well distributed
points on a sphere.

This example is an extension of the
:ref:`sphx_glr_examples_built_quick_start_tracking_introduction_eudx.py`
example. We'll begin by repeating a few steps from that example, loading the
data and fitting a Constrained Spherical Deconvolution (CSD) model.

.. GENERATED FROM PYTHON SOURCE LINES 22-58

.. code-block:: Python


    from dipy.core.gradients import gradient_table
    from dipy.data import get_fnames, small_sphere, default_sphere
    from dipy.direction import ProbabilisticDirectionGetter, peaks_from_model
    from dipy.io.gradients import read_bvals_bvecs
    from dipy.io.image import load_nifti, load_nifti_data
    from dipy.io.stateful_tractogram import Space, StatefulTractogram
    from dipy.io.streamline import save_trk
    from dipy.reconst.csdeconv import (ConstrainedSphericalDeconvModel,
                                       auto_response_ssst)
    from dipy.reconst.shm import CsaOdfModel
    from dipy.tracking import utils
    from dipy.tracking.local_tracking import LocalTracking
    from dipy.tracking.streamline import Streamlines
    from dipy.tracking.stopping_criterion import ThresholdStoppingCriterion
    from dipy.viz import window, actor, colormap, has_fury

    # Enables/disables interactive visualization
    interactive = False

    hardi_fname, hardi_bval_fname, hardi_bvec_fname = get_fnames('stanford_hardi')
    label_fname = get_fnames('stanford_labels')

    data, affine, hardi_img = load_nifti(hardi_fname, return_img=True)
    labels = load_nifti_data(label_fname)
    bvals, bvecs = read_bvals_bvecs(hardi_bval_fname, hardi_bvec_fname)
    gtab = gradient_table(bvals, bvecs)

    seed_mask = (labels == 2)
    white_matter = (labels == 1) | (labels == 2)
    seeds = utils.seeds_from_mask(seed_mask, affine, density=1)

    response, ratio = auto_response_ssst(gtab, data, roi_radii=10, fa_thr=0.7)
    csd_model = ConstrainedSphericalDeconvModel(gtab, response, sh_order=6)
    csd_fit = csd_model.fit(data, mask=white_matter)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

      0%|                                                                                                                            | 0/58788 [00:00<?, ?it/s]      1%|▌                                                                                                               | 294/58788 [00:00<00:20, 2914.32it/s]      1%|█▎                                                                                                              | 675/58788 [00:00<00:16, 3419.37it/s]      2%|██▏                                                                                                            | 1179/58788 [00:00<00:13, 4142.24it/s]      3%|███▏                                                                                                           | 1685/58788 [00:00<00:12, 4491.13it/s]      4%|████                                                                                                           | 2135/58788 [00:00<00:13, 4324.07it/s]      5%|█████                                                                                                          | 2667/58788 [00:00<00:12, 4641.66it/s]      5%|█████▉                                                                                                         | 3133/58788 [00:00<00:12, 4637.18it/s]      6%|██████▊                                                                                                        | 3598/58788 [00:00<00:11, 4640.28it/s]      7%|███████▋                                                                                                       | 4063/58788 [00:00<00:11, 4618.46it/s]      8%|████████▉                                                                                                      | 4709/58788 [00:01<00:10, 5161.13it/s]      9%|██████████                                                                                                     | 5353/58788 [00:01<00:09, 5538.28it/s]     10%|███████████▏                                                                                                   | 5908/58788 [00:01<00:09, 5436.73it/s]     11%|████████████▏                                                                                                  | 6473/58788 [00:01<00:09, 5411.66it/s]     12%|█████████████▍                                                                                                 | 7121/58788 [00:01<00:09, 5713.03it/s]     13%|██████████████▌                                                                                                | 7694/58788 [00:01<00:09, 5387.34it/s]     14%|███████████████▋                                                                                               | 8280/58788 [00:01<00:09, 5506.59it/s]     15%|████████████████▉                                                                                              | 8966/58788 [00:01<00:08, 5882.22it/s]     16%|██████████████████                                                                                             | 9558/58788 [00:01<00:09, 5403.52it/s]     17%|██████████████████▉                                                                                           | 10108/58788 [00:01<00:09, 5387.94it/s]     18%|███████████████████▉                                                                                          | 10654/58788 [00:02<00:08, 5397.60it/s]     19%|████████████████████▉                                                                                         | 11199/58788 [00:02<00:08, 5403.31it/s]     20%|█████████████████████▉                                                                                        | 11743/58788 [00:02<00:09, 5135.48it/s]     21%|██████████████████████▉                                                                                       | 12261/58788 [00:02<00:09, 4995.13it/s]     22%|███████████████████████▉                                                                                      | 12779/58788 [00:02<00:09, 5038.66it/s]     23%|█████████████████████████                                                                                     | 13390/58788 [00:02<00:08, 5332.01it/s]     24%|██████████████████████████                                                                                    | 13928/58788 [00:02<00:08, 5331.44it/s]     25%|███████████████████████████▏                                                                                  | 14504/58788 [00:02<00:08, 5445.67it/s]     26%|████████████████████████████▏                                                                                 | 15051/58788 [00:02<00:08, 5106.97it/s]     27%|█████████████████████████████▏                                                                                | 15630/58788 [00:03<00:08, 5284.61it/s]     28%|██████████████████████████████▎                                                                               | 16218/58788 [00:03<00:07, 5443.61it/s]     29%|███████████████████████████████▎                                                                              | 16767/58788 [00:03<00:07, 5296.82it/s]     29%|████████████████████████████████▎                                                                             | 17300/58788 [00:03<00:08, 5135.08it/s]     30%|█████████████████████████████████▎                                                                            | 17817/58788 [00:03<00:08, 4958.16it/s]     31%|██████████████████████████████████▎                                                                           | 18316/58788 [00:03<00:08, 4889.21it/s]     32%|███████████████████████████████████▎                                                                          | 18893/58788 [00:03<00:07, 5128.17it/s]     33%|████████████████████████████████████▎                                                                         | 19411/58788 [00:03<00:07, 5132.78it/s]     34%|█████████████████████████████████████▎                                                                        | 19926/58788 [00:03<00:08, 4686.09it/s]     35%|██████████████████████████████████████▏                                                                       | 20405/58788 [00:04<00:08, 4701.74it/s]     36%|███████████████████████████████████████▎                                                                      | 21006/58788 [00:04<00:07, 5060.99it/s]     37%|████████████████████████████████████████▋                                                                     | 21729/58788 [00:04<00:06, 5669.67it/s]     38%|█████████████████████████████████████████▉                                                                    | 22387/58788 [00:04<00:06, 5918.39it/s]     39%|███████████████████████████████████████████                                                                   | 22985/58788 [00:04<00:06, 5925.19it/s]     40%|████████████████████████████████████████████▏                                                                 | 23605/58788 [00:04<00:05, 5989.10it/s]     41%|█████████████████████████████████████████████▍                                                                | 24270/58788 [00:04<00:05, 6170.26it/s]     42%|██████████████████████████████████████████████▌                                                               | 24890/58788 [00:04<00:05, 6166.82it/s]     43%|███████████████████████████████████████████████▋                                                              | 25509/58788 [00:04<00:05, 5985.47it/s]     44%|████████████████████████████████████████████████▊                                                             | 26110/58788 [00:04<00:05, 5843.31it/s]     45%|█████████████████████████████████████████████████▉                                                            | 26697/58788 [00:05<00:05, 5372.44it/s]     46%|███████████████████████████████████████████████████                                                           | 27293/58788 [00:05<00:05, 5519.40it/s]     47%|████████████████████████████████████████████████████                                                          | 27852/58788 [00:05<00:05, 5529.47it/s]     48%|█████████████████████████████████████████████████████▏                                                        | 28410/58788 [00:05<00:05, 5341.32it/s]     49%|██████████████████████████████████████████████████████▎                                                       | 28994/58788 [00:05<00:05, 5471.69it/s]     50%|███████████████████████████████████████████████████████▍                                                      | 29645/58788 [00:05<00:05, 5757.37it/s]     51%|████████████████████████████████████████████████████████▌                                                     | 30258/58788 [00:05<00:04, 5847.00it/s]     52%|█████████████████████████████████████████████████████████▋                                                    | 30846/58788 [00:05<00:04, 5677.37it/s]     53%|██████████████████████████████████████████████████████████▊                                                   | 31417/58788 [00:05<00:04, 5510.48it/s]     54%|███████████████████████████████████████████████████████████▊                                                  | 31971/58788 [00:06<00:05, 5204.19it/s]     55%|████████████████████████████████████████████████████████████▊                                                 | 32496/58788 [00:06<00:05, 5059.34it/s]     56%|█████████████████████████████████████████████████████████████▊                                                | 33007/58788 [00:06<00:05, 5069.68it/s]     57%|██████████████████████████████████████████████████████████████▋                                               | 33517/58788 [00:06<00:05, 5053.64it/s]     58%|███████████████████████████████████████████████████████████████▋                                              | 34024/58788 [00:06<00:04, 5048.66it/s]     59%|████████████████████████████████████████████████████████████████▌                                             | 34530/58788 [00:06<00:04, 5041.87it/s]     60%|█████████████████████████████████████████████████████████████████▌                                            | 35035/58788 [00:06<00:04, 5032.22it/s]     61%|██████████████████████████████████████████████████████████████████▌                                           | 35572/58788 [00:06<00:04, 5120.43it/s]     62%|███████████████████████████████████████████████████████████████████▋                                          | 36169/58788 [00:06<00:04, 5357.09it/s]     62%|████████████████████████████████████████████████████████████████████▋                                         | 36706/58788 [00:06<00:04, 5191.94it/s]     64%|██████████████████████████████████████████████████████████████████████                                        | 37423/58788 [00:07<00:03, 5753.40it/s]     65%|███████████████████████████████████████████████████████████████████████▏                                      | 38043/58788 [00:07<00:03, 5867.41it/s]     66%|████████████████████████████████████████████████████████████████████████▎                                     | 38632/58788 [00:07<00:03, 5690.88it/s]     67%|█████████████████████████████████████████████████████████████████████████▎                                    | 39204/58788 [00:07<00:03, 5688.37it/s]     68%|██████████████████████████████████████████████████████████████████████████▍                                   | 39775/58788 [00:07<00:03, 5420.10it/s]     69%|███████████████████████████████████████████████████████████████████████████▍                                  | 40321/58788 [00:07<00:03, 5220.70it/s]     69%|████████████████████████████████████████████████████████████████████████████▍                                 | 40847/58788 [00:07<00:03, 4939.76it/s]     70%|█████████████████████████████████████████████████████████████████████████████▎                                | 41345/58788 [00:07<00:03, 4941.11it/s]     71%|██████████████████████████████████████████████████████████████████████████████▍                               | 41951/58788 [00:07<00:03, 5242.41it/s]     72%|███████████████████████████████████████████████████████████████████████████████▌                              | 42490/58788 [00:08<00:03, 5272.00it/s]     73%|████████████████████████████████████████████████████████████████████████████████▊                             | 43202/58788 [00:08<00:02, 5792.95it/s]     75%|██████████████████████████████████████████████████████████████████████████████████                            | 43832/58788 [00:08<00:02, 5934.91it/s]     76%|███████████████████████████████████████████████████████████████████████████████████▏                          | 44429/58788 [00:08<00:02, 5313.42it/s]     77%|████████████████████████████████████████████████████████████████████████████████████▏                         | 44974/58788 [00:08<00:02, 5339.41it/s]     77%|█████████████████████████████████████████████████████████████████████████████████████▏                        | 45518/58788 [00:08<00:02, 5178.64it/s]     78%|██████████████████████████████████████████████████████████████████████████████████████▏                       | 46072/58788 [00:08<00:02, 5269.30it/s]     79%|███████████████████████████████████████████████████████████████████████████████████████▎                      | 46634/58788 [00:08<00:02, 5358.63it/s]     80%|████████████████████████████████████████████████████████████████████████████████████████▎                     | 47175/58788 [00:08<00:02, 5207.70it/s]     81%|█████████████████████████████████████████████████████████████████████████████████████████▎                    | 47700/58788 [00:09<00:02, 5204.58it/s]     82%|██████████████████████████████████████████████████████████████████████████████████████████▌                   | 48389/58788 [00:09<00:01, 5676.98it/s]     83%|███████████████████████████████████████████████████████████████████████████████████████████▊                  | 49071/58788 [00:09<00:01, 5995.86it/s]     85%|█████████████████████████████████████████████████████████████████████████████████████████████                 | 49745/58788 [00:09<00:01, 6194.57it/s]     86%|██████████████████████████████████████████████████████████████████████████████████████████████▌               | 50544/58788 [00:09<00:01, 6706.17it/s]     87%|███████████████████████████████████████████████████████████████████████████████████████████████▊              | 51217/58788 [00:09<00:01, 6697.15it/s]     88%|█████████████████████████████████████████████████████████████████████████████████████████████████             | 51889/58788 [00:09<00:01, 6343.35it/s]     89%|██████████████████████████████████████████████████████████████████████████████████████████████████▎           | 52529/58788 [00:09<00:01, 5692.29it/s]     90%|███████████████████████████████████████████████████████████████████████████████████████████████████▍          | 53128/58788 [00:09<00:00, 5760.18it/s]     91%|████████████████████████████████████████████████████████████████████████████████████████████████████▌         | 53715/58788 [00:09<00:00, 5588.64it/s]     92%|█████████████████████████████████████████████████████████████████████████████████████████████████████▌        | 54282/58788 [00:10<00:00, 5596.90it/s]     93%|██████████████████████████████████████████████████████████████████████████████████████████████████████▋       | 54848/58788 [00:10<00:00, 5603.57it/s]     94%|███████████████████████████████████████████████████████████████████████████████████████████████████████▋      | 55443/58788 [00:10<00:00, 5690.34it/s]     96%|█████████████████████████████████████████████████████████████████████████████████████████████████████████▏    | 56189/58788 [00:10<00:00, 6187.36it/s]     97%|██████████████████████████████████████████████████████████████████████████████████████████████████████████▎   | 56812/58788 [00:10<00:00, 5840.75it/s]     98%|███████████████████████████████████████████████████████████████████████████████████████████████████████████▍  | 57402/58788 [00:10<00:00, 5682.68it/s]     99%|████████████████████████████████████████████████████████████████████████████████████████████████████████████▍ | 57975/58788 [00:10<00:00, 5685.71it/s]    100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████▌| 58547/58788 [00:10<00:00, 5522.62it/s]    100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████| 58788/58788 [00:10<00:00, 5382.82it/s]




.. GENERATED FROM PYTHON SOURCE LINES 59-60

We use the GFA of the CSA model to build a stopping criterion.

.. GENERATED FROM PYTHON SOURCE LINES 60-65

.. code-block:: Python


    csa_model = CsaOdfModel(gtab, sh_order=6)
    gfa = csa_model.fit(data, mask=white_matter).gfa
    stopping_criterion = ThresholdStoppingCriterion(gfa, .25)








.. GENERATED FROM PYTHON SOURCE LINES 66-75

The Fiber Orientation Distribution (FOD) of the CSD model estimates the
distribution of small fiber bundles within each voxel. We can use this
distribution for probabilistic fiber tracking. One way to do this is to
represent the FOD using a discrete sphere. This discrete FOD can be used by
the ``ProbabilisticDirectionGetter`` as a PMF for sampling tracking
directions. We need to clip the FOD to use it as a PMF because the latter
cannot have negative values. Ideally, the FOD should be strictly positive,
but because of noise and/or model failures sometimes it can have negative
values.

.. GENERATED FROM PYTHON SOURCE LINES 75-94

.. code-block:: Python


    fod = csd_fit.odf(small_sphere)
    pmf = fod.clip(min=0)
    prob_dg = ProbabilisticDirectionGetter.from_pmf(pmf, max_angle=30.,
                                                    sphere=small_sphere)
    streamline_generator = LocalTracking(prob_dg, stopping_criterion, seeds,
                                         affine, step_size=.5)
    streamlines = Streamlines(streamline_generator)
    sft = StatefulTractogram(streamlines, hardi_img, Space.RASMM)
    save_trk(sft, "tractogram_probabilistic_dg_pmf.trk")

    if has_fury:
        scene = window.Scene()
        scene.add(actor.line(streamlines, colormap.line_colors(streamlines)))
        window.record(scene, out_path='tractogram_probabilistic_dg_pmf.png',
                      size=(800, 800))
        if interactive:
            window.show(scene)




.. image-sg:: /examples_built/fiber_tracking/images/sphx_glr_tracking_probabilistic_001.png
   :alt: tracking probabilistic
   :srcset: /examples_built/fiber_tracking/images/sphx_glr_tracking_probabilistic_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 95-111

.. rst-class:: centered small fst-italic fw-semibold

Corpus Callosum using probabilistic direction getter from PMF



One disadvantage of using a discrete PMF to represent possible tracking
directions is that it tends to take up a lot of memory (RAM). The size of the
PMF, the FOD in this case, must be equal to the number of possible tracking
directions on the hemisphere, and every voxel has a unique PMF. In this case
the data is ``(81, 106, 76)`` and ``small_sphere`` has 181 directions so the
FOD is ``(81, 106, 76, 181)``. One way to avoid sampling the PMF and holding
it in memory is to build the direction getter directly from the spherical
harmonic (SH) representation of the FOD. By using this approach, we can also
use a larger sphere, like ``default_sphere`` which has 362 directions on the
hemisphere, without having to worry about memory limitations.

.. GENERATED FROM PYTHON SOURCE LINES 111-130

.. code-block:: Python


    prob_dg = ProbabilisticDirectionGetter.from_shcoeff(csd_fit.shm_coeff,
                                                        max_angle=30.,
                                                        sphere=default_sphere,
                                                        sh_to_pmf=True)
    streamline_generator = LocalTracking(prob_dg, stopping_criterion, seeds,
                                         affine, step_size=.5)
    streamlines = Streamlines(streamline_generator)
    sft = StatefulTractogram(streamlines, hardi_img, Space.RASMM)
    save_trk(sft, "tractogram_probabilistic_dg_sh.trk")

    if has_fury:
        scene = window.Scene()
        scene.add(actor.line(streamlines, colormap.line_colors(streamlines)))
        window.record(scene, out_path='tractogram_probabilistic_dg_sh.png',
                      size=(800, 800))
        if interactive:
            window.show(scene)




.. image-sg:: /examples_built/fiber_tracking/images/sphx_glr_tracking_probabilistic_002.png
   :alt: tracking probabilistic
   :srcset: /examples_built/fiber_tracking/images/sphx_glr_tracking_probabilistic_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 131-141

.. rst-class:: centered small fst-italic fw-semibold

Corpus Callosum using probabilistic direction getter from SH



Not all model fits have the ``shm_coeff`` attribute because not all models
use this basis to represent the data internally. However we can fit the ODF
of any model to the spherical harmonic basis using the ``peaks_from_model``
function.

.. GENERATED FROM PYTHON SOURCE LINES 141-164

.. code-block:: Python


    peaks = peaks_from_model(csd_model, data, default_sphere, .5, 25,
                             mask=white_matter, return_sh=True, parallel=True,
                             num_processes=2)
    fod_coeff = peaks.shm_coeff

    prob_dg = ProbabilisticDirectionGetter.from_shcoeff(fod_coeff, max_angle=30.,
                                                        sphere=default_sphere,
                                                        sh_to_pmf=True)
    streamline_generator = LocalTracking(prob_dg, stopping_criterion, seeds,
                                         affine, step_size=.5)
    streamlines = Streamlines(streamline_generator)
    sft = StatefulTractogram(streamlines, hardi_img, Space.RASMM)
    save_trk(sft, "tractogram_probabilistic_dg_sh_pfm.trk")

    if has_fury:
        scene = window.Scene()
        scene.add(actor.line(streamlines, colormap.line_colors(streamlines)))
        window.record(scene, out_path='tractogram_probabilistic_dg_sh_pfm.png',
                      size=(800, 800))
        if interactive:
            window.show(scene)




.. image-sg:: /examples_built/fiber_tracking/images/sphx_glr_tracking_probabilistic_003.png
   :alt: tracking probabilistic
   :srcset: /examples_built/fiber_tracking/images/sphx_glr_tracking_probabilistic_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 165-169

.. rst-class:: centered small fst-italic fw-semibold

Corpus Callosum using probabilistic direction getter from SH
(peaks_from_model)

.. GENERATED FROM PYTHON SOURCE LINES 171-173

.. include:: ../../links_names.inc



.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (1 minutes 15.463 seconds)


.. _sphx_glr_download_examples_built_fiber_tracking_tracking_probabilistic.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: tracking_probabilistic.ipynb <tracking_probabilistic.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: tracking_probabilistic.py <tracking_probabilistic.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
